// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`option criteria have sane fallbacks 1`] = `
Object {
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [],
      "latestUaResults": Array [],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {
    "clientName": "Betty Rubble",
  },
  "stateCode": "US_ID",
}
`;

exports[`transform dual/parole record 1`] = `
Object {
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": Array [
        false,
      ],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [
        2022-03-09T00:00:00.000Z,
      ],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {
    "clientName": "Betty Rubble",
  },
  "stateCode": "US_ID",
}
`;

exports[`transform probation record 1`] = `
Object {
  "criteria": Object {
    "negativeUaWithin90Days": Object {
      "latestUaDates": Array [
        2022-01-03T00:00:00.000Z,
      ],
      "latestUaResults": Array [
        false,
      ],
    },
    "noFelonyWithin24Months": Object {
      "latestFelonyConvictions": Array [
        2022-01-05T00:00:00.000Z,
        2022-05-28T00:00:00.000Z,
      ],
    },
    "noViolentMisdemeanorWithin12Months": Object {
      "latestViolentConvictions": Array [
        2022-03-09T00:00:00.000Z,
      ],
    },
    "pastEarnedDischargeEligibleDate": Object {
      "eligibleDate": 2022-05-22T00:00:00.000Z,
      "sentenceType": "DUAL",
    },
    "usIdIncomeVerifiedWithin3Months": Object {
      "incomeVerifiedDate": 2022-06-03T00:00:00.000Z,
    },
    "usIdLsirLevelLowModerateForXDays": Object {
      "eligibleDate": 2022-01-03T00:00:00.000Z,
      "riskLevel": "MODERATE",
    },
  },
  "eligibleStartDate": 2022-10-05T00:00:00.000Z,
  "externalId": "001",
  "formInformation": Object {
    "clientName": "Betty Rubble",
  },
  "stateCode": "US_ID",
}
`;
